--- a/client/views/profile.html
+++ b/client/views/profile.html
@@ -32,7 +32,14 @@
 			<div class="stats-wrapper">
 				<div class="stat">
 					<div class="vam">
-						{{{userCharacters}}}
+						{{{userWordsCount}}}
+					</div>
+				</div>
+			</div>
+			<div class="stats-wrapper">
+				<div class="stat">
+					<div class="vam">
+						{{{userCharactersCount}}}
 					</div>
 				</div>
 			</div>
