--- a/client/views/welcome.html
+++ b/client/views/welcome.html
@@ -53,7 +53,7 @@
 				<div class="vam">
 					<img src="/images/mail.png">
 					<h6>Notifications</h6>
-					<span>you already know what notifications are, right?</span>
+					<span>Never miss a message from your channels</span>
 				</div>
 			</div>
 		</div>
