--- a/client/views/welcome.html
+++ b/client/views/welcome.html
@@ -1,7 +1,8 @@
 <template name="welcome">
 	<div class="welcome-mast">
 		<div class="welcome-mast-cont">
-			<h1>Chat in <b>realtime</b>, for real</h1>
+			<h1 style='font-size: 3.5em;'>OpenTalk</h1>
+			<h1>The <b>real</b> realtime chat</h1>
 			<img src="/images/logo_even_white.svg" class='logo-welcome'/>
 			<h6>No signup required</h6>
 			<h6>Simple and uncluttered UI</h6>
@@ -23,13 +24,6 @@
 			</div>
 			<div class="feature">
 				<div class="vam">
-					<img src="/images/speech-bubble.png">
-					<h6>Markdown</h6>
-					<span>if you're into that thing</span>
-				</div>
-			</div>
-			<div class="feature">
-				<div class="vam">
 					<img src="/images/stats.png">
 					<h6><a href="/profile">Stats</a></h6>
 					<span>if you wonder how many characters you typed</span>
@@ -39,7 +33,7 @@
 				<div class="vam">
 					<img src="/images/search.png">
 					<h6>Interests</h6>
-					<span>chat about things that interest you</span>
+					<span>find interesting chatrooms*</span>
 				</div>
 			</div>
 			<div class="feature">
@@ -51,11 +45,21 @@
 			</div>
 			<div class="feature">
 				<div class="vam">
+					<img src="/images/speech-bubble.png">
+					<h6>Markdown</h6>
+					<span>if you're into that thing</span>
+				</div>
+			</div>
+			<div class="feature">
+				<div class="vam">
 					<img src="/images/mail.png">
 					<h6>Notifications</h6>
-					<span>Never miss a message from your channels</span>
+					<span>Never miss a message from your chatrooms*</span>
 				</div>
 			</div>
 		</div>
 	</div>
+	<aside class="footer">
+		+mandatory disclaimer here+
+	</aside>
 </template>
