--- a/client/sass/_welcome.scss
+++ b/client/sass/_welcome.scss
@@ -131,4 +131,10 @@ $offset-y:-312px;
 	overflow: hidden;
 	padding: 3em 2em!important;
 	margin:auto!important;
+	color:#666;
 }
+	.tos{
+		margin:4em auto;
+		font-family: 'Source Sans Pro', sans-serif;
+		font-weight: 300;
+	}
