--- a/client/views/welcome.html
+++ b/client/views/welcome.html
@@ -7,7 +7,7 @@
 			<h6>No signup required</h6>
 			<h6>Simple and uncluttered UI</h6>
 			<h6>Markdown support? hell yeah</h6>
-			<h6>Uh! I almost forgot: it's <b><a style='color:#222;' href="https://github.com/christian-fei/opentalk.me">opensource</a></b></h6>
+			<h6>Uh! I almost forgot: it's <b><a style='color:#222;' target='_blank' href="https://github.com/christian-fei/opentalk.me">opensource</a></b></h6>
 		</div>
 	</div>
 	<div class="blanket medium-text">
@@ -40,7 +40,7 @@
 				<div class="vam">
 					<img src="/images/unlocked.png">
 					<h6>Opensource</h6>
-					<span>Would you like to contribute? <a href="https://github.com/christian-fei/opentalk.me">Here you go</a></span>
+					<span>Would you like to contribute? <a href="https://github.com/christian-fei/opentalk.me" target='_blank'>Here you go</a></span>
 				</div>
 			</div>
 			<div class="feature">
@@ -60,6 +60,28 @@
 		</div>
 	</div>
 	<aside class="footer">
-		+mandatory disclaimer here+
+		<div class="tos">
+			<h6>ToS</h6>
+			<ul>
+				<li>don't be a jerk.</li>
+				<li>you visit a public chatroom at your own risk</li>
+				<li>don't be a jerk.</li>
+				<li>all content despite being hosted openly is subject to copyright of Christian Fei</li>
+				<li>don't be a jerk.</li>
+				<li>the source is free for personal/private use, it cannot be used for commercial purposes</li>
+				<li>don't be a jerk.</li>
+				<li>I cannot be held reliable in any way for anything that happened on this web service. fu</li>
+				<li>don't be a jerk.</li>
+			</ul>
+			<br>
+			<p>tl;dr</p>
+			<p>don't be a jerk.</p>
+		</div>
+		<br/>
+
+		<p>Made with love by <a href="https://twitter.com/christian_fei" target='_blank'>christian_fei</a> with <a href="http://meteor.com">Meteor</a></p>	
+
+		<br/>
+		<p style='text-align:center'>&copy; right now ~ opentalk.me</p>
 	</aside>
 </template>
