--- a/client/sass/_typography.scss
+++ b/client/sass/_typography.scss
@@ -18,10 +18,16 @@ h4{font-size: 2em;}
 h5{font-size: 1.5em;}
 h6{font-size: 1.2em;}
 
+a{
+	color:#2B2B2B;
+}
+a:visited{
+	color:#002B73
+}
 
 ul{
 	li{
-		margin-left:1em;
+		margin-left:1.3em;
 	}
 	ul{
 		margin-left: 1.5em;
