--- a/client/css/main.css
+++ b/client/css/main.css
@@ -1017,16 +1017,47 @@ code {
 }
 
 /* line 72, ../sass/_messages.scss */
-.username {
-  display: none;
-  position: absolute;
+.tip:hover .username {
+  visibility: visible;
+  opacity: 1;
 }
 
-/* line 80, ../sass/_messages.scss */
+/* line 77, ../sass/_messages.scss */
+.username {
+  position: absolute;
+  visibility: hidden;
+  opacity: 0;
+  width: auto;
+  white-space: nowrap;
+  left: 2.5em;
+  top: -.2em;
+  background: #444444;
+  color: #fff;
+  padding: .4em;
+  border-radius: 5px;
+  -webkit-transition: all .2s ease-in-out;
+  -moz-transition: all .2s ease-in-out;
+  -ms-transition: all .2s ease-in-out;
+  -o-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
+}
+/* line 98, ../sass/_messages.scss */
+.username:after {
+  content: "";
+  position: absolute;
+  top: .6em;
+  left: -.5em;
+  border-right: 0.7em solid #444444;
+  border-top-color: inherit;
+  border-bottom: .5em solid transparent;
+  border-top: .5em solid transparent;
+}
+
+/* line 110, ../sass/_messages.scss */
 .message-image-wrapper {
   position: relative;
 }
-/* line 86, ../sass/_messages.scss */
+/* line 116, ../sass/_messages.scss */
 .message-image-wrapper .open-in-new-tab {
   position: absolute;
   top: .2em;
@@ -1037,21 +1068,21 @@ code {
   background-size: 100%;
 }
 
-/* line 96, ../sass/_messages.scss */
+/* line 126, ../sass/_messages.scss */
 .message-image {
   display: inline-block;
   max-height: 5em;
   margin-top: .2em;
   margin-top: .2em;
 }
-/* line 102, ../sass/_messages.scss */
+/* line 132, ../sass/_messages.scss */
 .message-image.exp {
   max-width: 32em;
   max-height: inherit;
   width: 100%;
 }
 
-/* line 109, ../sass/_messages.scss */
+/* line 139, ../sass/_messages.scss */
 .diffUser {
   margin-top: .8em;
   border-top-right-radius: .5em;
@@ -1059,14 +1090,14 @@ code {
   border-top: 1px solid lightgrey;
 }
 
-/* line 115, ../sass/_messages.scss */
+/* line 145, ../sass/_messages.scss */
 .lastOfUser {
   border-bottom: 1px solid lightgrey;
   border-bottom-right-radius: .5em;
   border-bottom-left-radius: .5em;
 }
 
-/* line 122, ../sass/_messages.scss */
+/* line 152, ../sass/_messages.scss */
 .cssanimations.csstransitions .slick-realtime-shit {
   -webkit-animation: realtime-anim 10s ease-out;
   -moz-animation: realtime-anim 10s ease-out;
@@ -1074,12 +1105,12 @@ code {
   animation: realtime-anim 10s ease-out;
 }
 
-/* line 129, ../sass/_messages.scss */
+/* line 159, ../sass/_messages.scss */
 #li-message {
   width: 100%;
 }
 
-/* line 132, ../sass/_messages.scss */
+/* line 162, ../sass/_messages.scss */
 #mymessage {
   resize: none !important;
   width: 100%;
@@ -1096,60 +1127,60 @@ code {
 }
 
 @-webkit-keyframes realtime-anim {
-  /* line 160, ../sass/_messages.scss */
+  /* line 190, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 161, ../sass/_messages.scss */
+  /* line 191, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @-moz-keyframes realtime-anim {
-  /* line 164, ../sass/_messages.scss */
+  /* line 194, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 165, ../sass/_messages.scss */
+  /* line 195, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @-ms-keyframes realtime-anim {
-  /* line 168, ../sass/_messages.scss */
+  /* line 198, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 169, ../sass/_messages.scss */
+  /* line 199, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @-o-keyframes realtime-anim {
-  /* line 172, ../sass/_messages.scss */
+  /* line 202, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 173, ../sass/_messages.scss */
+  /* line 203, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @keyframes realtime-anim {
-  /* line 176, ../sass/_messages.scss */
+  /* line 206, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 177, ../sass/_messages.scss */
+  /* line 207, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
