--- a/client/sass/_welcome.scss
+++ b/client/sass/_welcome.scss
@@ -17,6 +17,7 @@
 		padding:5em;
 		background:url('/images/opentalk_bg_opaque.png');
 		background:url('/images/pattern-white.png');
+		background:url('/images/pattern-white-high-res.png');
 		// background-size: 400px;
 		
 		@media all and(min-width: $limit){
