--- a/client/views/room.html
+++ b/client/views/room.html
@@ -3,6 +3,8 @@
 	{{#isolate}}
 		<div class="online-users-count"><span>{{onlineUsersCount}}</span></div>
 	{{/isolate}}
+
+	<div class="fixed-sidebar-background"></div>
 	<aside class="fixed-sidebar">
 		<a href="/" title='to the homepage' class='go-home-you-are-drunk'>
 			<img src="/images/logo_even_dark.png" alt="" class="logo">
