--- a/client/sass/_sidebar.scss
+++ b/client/sass/_sidebar.scss
@@ -3,7 +3,7 @@
 	top:0;
 	bottom:0;
 	left:0;
-	// background: url('/images/pattern-lines-only.png');
+	background: white;
 	background: -moz-linear-gradient(left, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1));
     background: -ms-linear-gradient(left, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1));
     background: -webkit-gradient(linear, 0 0, 100% 0, from(rgba(255, 255, 255, 0)), to(rgba(255, 255, 255, 1)));
