--- a/client/css/main.css
+++ b/client/css/main.css
@@ -718,6 +718,7 @@ SUPER SLICK TRANSFORMS
   top: 0;
   bottom: 0;
   left: 0;
+  background: white;
   background: -moz-linear-gradient(left, rgba(255, 255, 255, 0), white);
   background: -ms-linear-gradient(left, rgba(255, 255, 255, 0), white);
   background: -webkit-gradient(linear, 0 0, 100% 0, from(rgba(255, 255, 255, 0)), to(white));
@@ -1042,12 +1043,13 @@ code {
 /* line 77, ../sass/_messages.scss */
 .username {
   position: absolute;
+  font-size: .9em;
   visibility: hidden;
   opacity: 0;
   width: auto;
   white-space: nowrap;
-  left: 2.5em;
-  top: -.2em;
+  left: -.1em;
+  top: -2.8em;
   background: #444444;
   color: #fff;
   padding: .4em;
@@ -1058,23 +1060,23 @@ code {
   -o-transition: all .2s ease-in-out;
   transition: all .2s ease-in-out;
 }
-/* line 98, ../sass/_messages.scss */
+/* line 100, ../sass/_messages.scss */
 .username:after {
   content: "";
   position: absolute;
-  top: .6em;
-  left: -.5em;
-  border-right: 0.7em solid #444444;
-  border-top-color: inherit;
-  border-bottom: .5em solid transparent;
-  border-top: .5em solid transparent;
+  top: 2em;
+  left: .5em;
+  border-top: 0.7em solid #444444;
+  border-left-color: inherit;
+  border-right: .5em solid transparent;
+  border-left: .5em solid transparent;
 }
 
-/* line 110, ../sass/_messages.scss */
+/* line 112, ../sass/_messages.scss */
 .message-image-wrapper {
   position: relative;
 }
-/* line 116, ../sass/_messages.scss */
+/* line 118, ../sass/_messages.scss */
 .message-image-wrapper .open-in-new-tab {
   position: absolute;
   top: .2em;
@@ -1085,21 +1087,21 @@ code {
   background-size: 100%;
 }
 
-/* line 126, ../sass/_messages.scss */
+/* line 128, ../sass/_messages.scss */
 .message-image {
   display: inline-block;
   max-height: 5em;
   margin-top: .2em;
   margin-top: .2em;
 }
-/* line 132, ../sass/_messages.scss */
+/* line 134, ../sass/_messages.scss */
 .message-image.exp {
   max-width: 32em;
   max-height: inherit;
   width: 100%;
 }
 
-/* line 139, ../sass/_messages.scss */
+/* line 141, ../sass/_messages.scss */
 .diffUser {
   margin-top: .8em;
   border-top-right-radius: .5em;
@@ -1107,14 +1109,14 @@ code {
   border-top: 1px solid lightgrey;
 }
 
-/* line 145, ../sass/_messages.scss */
+/* line 147, ../sass/_messages.scss */
 .lastOfUser {
   border-bottom: 1px solid lightgrey;
   border-bottom-right-radius: .5em;
   border-bottom-left-radius: .5em;
 }
 
-/* line 152, ../sass/_messages.scss */
+/* line 154, ../sass/_messages.scss */
 .cssanimations.csstransitions .slick-realtime-shit {
   -webkit-animation: realtime-anim 10s ease-out;
   -moz-animation: realtime-anim 10s ease-out;
@@ -1122,12 +1124,12 @@ code {
   animation: realtime-anim 10s ease-out;
 }
 
-/* line 159, ../sass/_messages.scss */
+/* line 161, ../sass/_messages.scss */
 #li-message {
   width: 100%;
 }
 
-/* line 162, ../sass/_messages.scss */
+/* line 164, ../sass/_messages.scss */
 #mymessage {
   resize: none !important;
   width: 100%;
@@ -1144,60 +1146,60 @@ code {
 }
 
 @-webkit-keyframes realtime-anim {
-  /* line 190, ../sass/_messages.scss */
+  /* line 192, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 191, ../sass/_messages.scss */
+  /* line 193, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @-moz-keyframes realtime-anim {
-  /* line 194, ../sass/_messages.scss */
+  /* line 196, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 195, ../sass/_messages.scss */
+  /* line 197, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @-ms-keyframes realtime-anim {
-  /* line 198, ../sass/_messages.scss */
+  /* line 200, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 199, ../sass/_messages.scss */
+  /* line 201, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @-o-keyframes realtime-anim {
-  /* line 202, ../sass/_messages.scss */
+  /* line 204, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 203, ../sass/_messages.scss */
+  /* line 205, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @keyframes realtime-anim {
-  /* line 206, ../sass/_messages.scss */
+  /* line 208, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 207, ../sass/_messages.scss */
+  /* line 209, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
